fix(GlFilteredSearch): Less scrolling and wrapping from input min-width

--- a/src/components/base/filtered_search/filtered_search.scss
+++ b/src/components/base/filtered_search/filtered_search.scss
@@ -43,5 +43,4 @@
   @include gl-p-0;
   @include gl-pl-1;
   @include gl-h-6;
-  min-width: $gl-spacing-scale-12;
 }
