--- a/src/components/base/filtered_search/filtered_search_term.scss
+++ b/src/components/base/filtered_search/filtered_search_term.scss
@@ -9,7 +9,6 @@
   @include gl-border-none;
   @include gl-outline-none;
   @include gl-h-6;
-  min-width: $gl-dropdown-width;
 }
 
 .gl-filtered-search-term-icon {
