--- a/src/components/base/filtered_search/filtered_search_token_segment.scss
+++ b/src/components/base/filtered_search/filtered_search_token_segment.scss
@@ -16,7 +16,6 @@
   @include gl-h-full;
   @include gl-border-none;
   @include gl-outline-none;
-  min-width: $gl-dropdown-width;
 }
 
 .gl-filtered-search-token-segment-icon {
